# OS1RelocationSystem

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  config.json  dummy.txt  iphone.yaml  myWebcam.yaml  myWebcam_data  out_camera_data  package-lock.json  package.json  routes.js  webcam-iphone.yaml
AustralMap/: index.css  server.js
austral_reloc/: README.md  app.js  routes.js
client/: README.md  app.js
client/AustralMap/: index.html  package-lock.json  package.json
client/views/: index.css
include/: JsonParser.h  TcpSocketImageDecoder.h  Viewer.h
jsonConfig/: a.json
nodejs/public/: style.css
nodejs/public/javascript/: myscripts.js
nodejs/views/: error.pug
public/: error.css  index.html  style.css
public/javascript/: myscripts.js
resource/calibrations/: webcamNacho.yaml
scripts/: buildDependencies.sh
socket/: CMakeLists.txt  encoderSocket.js  main.cpp  package.json  socket.js
socket/socketObject/: TcpSocketImageDecoder.cpp  TcpSocketImageDecoder.h
src/: JsonParser.cpp  LoopClosing.cc  Optimizer.cc  System.cc  TcpSocketImageDecoder.cpp  Tracking.cc  Viewer.cc  main.cc  mapa.osMap
views/: index.css  map.html  map.pug
